echoserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: echoserver
  name: echoserver
  namespace: default
spec:
  tls:
    - hosts:
      - '*.local.io'
    secretName: local.io
  rules:
    - host: local.io
      http:
        paths:
          - backend:
              service:
                name: echoserver
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
